--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,5 @@
 {
   "name": "SNET Dev Container",
-  "image": "ghcr.io/zero2ai/snetdevcontainer:3001251346"
+  "image": "ghcr.io/zero2ai/snetdevcontainer:3001251346",
+  "postStartCommand": "dos2unix snetsdk.sh &&  bash snetsdk-setup.sh"
 }
