--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "SNET Dev Container",
   "image": "ghcr.io/zero2ai/snetdevcontainer:3001251346",
-  "postStartCommand": "apt install dos2unix && dos2unix snetsdk.sh && bash snetsdk.sh && cd r1storm && pip install -r requirements.txt && gradio bot_template.py &",
+  "postStartCommand": "apt install dos2unix && dos2unix snetsdk.sh && bash snetsdk.sh && cd r1storm && pip install -r requirements.txt && dos2unix botapp.sh",
   "forwardPorts": ["9001:7860", "9002:8010"]
 }
